<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/income_padding" >

    <LinearLayout
        android:id="@+id/lladdpretitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/tvaddpretitle"
            style="@dimen/income_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/addpre_title" />
    </LinearLayout>

    <!-- 收入金额 -->

    <LinearLayout
        android:id="@+id/lltest01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvincome01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/outcome_num" />

        <EditText
            android:id="@+id/etincome01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/outcome_input_num" />
    </LinearLayout>
    <!-- 收入收入方式 -->

    <LinearLayout
        android:id="@+id/lltest02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvincome02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/outcome_style" />

        <Spinner
            android:id="@+id/spinner01"
            style="@android:attr/spinnerDropDownItemStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:spinnerMode="dropdown" />
    </LinearLayout>
    <!-- 收入分类 -->

    <LinearLayout
        android:id="@+id/lltest03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvincome03"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/outcome_fenlei" />

        <Spinner
            android:id="@+id/spinner02"
            style="@android:attr/spinnerDropDownItemStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:spinnerMode="dropdown" />
    </LinearLayout>
    <!-- 收入时间 -->

    <LinearLayout
        android:id="@+id/lltest04"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvincome04"
            style="@style/IncomeTimeStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:text="@string/addpre_time" />

        <TextView
            android:id="@+id/tvtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>
    <!-- 收入备注 -->

    <LinearLayout
        android:id="@+id/lltest05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvincome05"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/outcome_note" />

        <EditText
            android:id="@+id/etincomenote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/outcome_note_input" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltestbootom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/income_btn_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/outcome_reset" />

        <Button
            android:id="@+id/income_btn_submit"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:background="@drawable/login_bnt_img"
            android:enabled="false"
            android:text="@string/outcome_submit" />
    </LinearLayout>

</LinearLayout>