<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
    
     <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/xiaohu_shouru" />
 
    <!-- 收入金额 -->
    <LinearLayout
        android:id="@+id/lltest01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvincome01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/income_num"
         />
         <EditText
            android:id="@+id/etincome01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/income_input_num"
         />
     </LinearLayout>
    
    <!-- 收入方式 -->
    <LinearLayout
        android:id="@+id/lltest02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvincome02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/income_style"
         />
         <Spinner
            android:id="@+id/spinner01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            style="@android:attr/spinnerDropDownItemStyle"
            android:spinnerMode="dropdown"
         />
     </LinearLayout>
    
    <!-- 收入分类-->
     <LinearLayout
        android:id="@+id/lltest03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvincome03"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/income_fenlei"
         />
         <Spinner
            android:id="@+id/spinner02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            style="@android:attr/spinnerDropDownItemStyle"
            android:spinnerMode="dropdown"
         />
     </LinearLayout>
     
     <!-- 收入时间 -->
      <LinearLayout
        android:id="@+id/lltest04"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvincome04"
            style="@style/IncomeTimeStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/income_time"
         />
         <TextView
            android:id="@+id/tvtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="输入时间"
         />
     </LinearLayout>
    
    <!-- 收入备注 -->
    <LinearLayout
        android:id="@+id/lltest05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvincome05"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/income_note"
         />
         <EditText
            android:id="@+id/etincomenote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/income_note_input"
         />
     </LinearLayout>
    
    <LinearLayout
        android:id="@+id/lltestbootom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/income_btn_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/income_reset" />

        <Button
            android:id="@+id/income_btn_submit"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:background="@drawable/login_bnt_img"
            android:enabled="false"
            android:text="@string/income_submit" />
    </LinearLayout>
</LinearLayout>
